# parallel_indexing

./: CMakeLists.txt  README.md  main.cpp  measure_time.hpp  read_from_file.cpp  script.py
boost_locale/: CMakeLists.txt  main.cpp
include/: boundary_analysis.hpp  count_token_usage.hpp  read_config.hpp  read_from_file.hpp  read_txt_to_string.hpp
libarchive/: CMakeLists.txt  main.cpp
libarchive_read_compressed_files_content/: CMakeLists.txt
src/: boundary_analysis.cpp  count_token_usage.cpp  read_config.cpp  read_from_file.cpp  read_txt_to_string.cpp
test_data/: input.txt  tar_example.tar
test_data/txt_files/: some_other_text.txt  some_text.txt
